# balhom-djangorest-api

./: .coverage  .coveragerc  .dockerignore  .gitignore  Dockerfile  README.md  api.env.example  api_entrypoint.sh  celery_beat_entrypoint.sh  celery_flower_entrypoint.sh  celery_worker_entrypoint.sh  commands.md  coverage.xml  docker-compose.yml  manage.py  pyproject.toml  sonar-project.properties  unversioned-requirements.txt
.github/workflows/: djangorest-develop.yml  djangorest-main.yml
api/: .dockerignore  .gitignore  README.md  api.env.example  docker-compose.yml
api/src/: .coveragerc  README.md  manage.py  pyproject.toml  sonar-project.properties  unversioned-requirements.txt
contracts/: README.md
contracts/endpoints/: account-endpoints.md  auth-endpoints.md  balance-endpoints.md  statistics-endpoints.md  user-endpoints.md  version-endpoints.md
contracts/requests/: account-requests.md  auth-requests.md  balance-requests.md  credentials-request.md  user-requests.md
contracts/responses/: account-response.md  balance-responses.md  statistics-responses.md  tokens-response.md  version-response.md
keycloak/: README.md  docker-compose.yml  keycloak.env.example
kubernetes/: balhom-api-configmap.yaml  balhom-api-deployment.yaml  balhom-api-secret.yaml  balhom-api-service.yaml  balhom-celery-beat-deployment.yaml  balhom-celery-flower-deployment.yaml  balhom-celery-flower-service.yaml  balhom-celery-worker-deployment.yaml  balhom-namespace.yaml
minio/: docker-compose.yml
postgres-db/: docker-compose.yml
redis/: docker-compose.yml
src/: .dockerignore
(+269 files in other folders)
